Feat: Implement hybrid deployment support (Dynamic CORS + Configurable API URL)